transaction bill offline

--- a/src/app/layout/admin/sell-pos/sell-pos.component.html
+++ b/src/app/layout/admin/sell-pos/sell-pos.component.html
@@ -6,40 +6,36 @@
         <span (click)="changeBill(bill)">Hóa đơn {{bill}}</span>
         <i class="fa-solid fa-x float-end mt-1 ms-1" (click)="deleteBill(bill)" *ngIf="listBill.length!==1"></i>
       </div>
-      <button class="btnPOS ms-2" (click)="addBill()" *ngIf="!isButtonPOS"><i class="fa-solid fa-plus"></i></button>
+<!--      <button class="btnPOS ms-2" (click)="addBill()" *ngIf="!isButtonPOS"><i class="fa-solid fa-plus"></i></button>-->
+      <button class="btnPOS ms-2" *ngIf="!isButtonPOS"><i class="fa-solid fa-plus"></i></button>
     </div>
   </div>
 
-  <div *ngFor="let detail of listDetailBill">
-    <div class="row" *ngIf="detail == currentBill">
+<!--  <div *ngFor="let detail of carts">-->
+  <div>
+    <div class="row" >
       <div class="col-8 sell-list_product">
         <div class="sell-list_product-header p-2">
           <div class="row">
             <div class="col-4">
 <!--              <input type="text" class="form-control" placeholder="Mã sản phẩm">-->
-              <p-dropdown
-                [options]="products"
-                optionLabel="name"
-                [filter]="true"
-                filterBy="name"
-                [showClear]="true"
-                placeholder="{{products==null ? 'abc':products.length}}"
-                (onFilter)="getProduct($event)"
+              <p-dropdown [options]="products" optionLabel="products" [filter]="true" filterBy="product" [showClear]="true" (onFilter)="getProduct($event)"
                 styleClass="searchProduct">
                 <ng-template let-product pTemplate="productItem" >
-                  <div class="product float-start" (mousedown)="selectProduct(product.importId)">
+                  <div class="product float-start" (mousedown)="selectProduct(product.productCode)">
                     <img [src]="product.img" [class]="'flag flag-' + product.productId"/>
                     {{product.productName}}
                   </div>
                 </ng-template>
               </p-dropdown>
+
             </div>
             <div class="col-8">
-              <p class="text-white float-end">Mã hóa đơn: {{detail}}</p>
+              <p class="text-white float-end">Mã hóa đơn: {{cartCode}}</p>
             </div>
           </div>
         </div>
-        <table *ngIf="cartItem.products!=null" class="table mt-3">
+        <table *ngIf="cartItem.products!=null && viewBillRequest!=null" class="table mt-3">
           <tbody>
             <tr *ngFor="let item of cartItem.products; let i=index" class="sell-list_product-body--item p-3">
               <th scope="row">{{i+1}}</th>
@@ -55,34 +51,29 @@
                 {{item.productName}}
               </th>
               <th>
-                <div class="btn-group">
-                  <p-dropdown [options]="item.items" optionLabel="unit" [filter]="false" filterBy="unitName" [showClear]="false" styleClass="elementUnitProduct">
-                    <ng-template let-unit pTemplate="unitItem">
-                      <div class="unit" (mousedown)="selectUnit(unit.unitId,item.productId)">
-                        {{unit.unitName}}
-                      </div>
-                    </ng-template>
-                  </p-dropdown>
+                <div class="btn-group" *ngIf="item!=null">
+                  <select class="form-unit-select" aria-label="Default select example" [(ngModel)]="unitIndex" (ngModelChange)=chosseUnit(i)>
+                    <option selected *ngFor="let e of item.items;let j = index" value="{{j}}">{{e.unitName}}</option>
+                  </select>
                 </div>
               </th>
               <th>
-                <div *ngIf="selectedUnit!=null">
+                <div *ngIf="null!=viewBillRequest && null !=viewBillRequest.detailBills">
                   <p-inputNumber
                     type="number"
-                    name="amount+{{item.productId}}+{{selectedUnit.unitId}}"
-                    id="amount+{{item.productId}}+{{selectedUnit.unitId}}"
-                    [(ngModel)]="item.amount">
+                    name="amount+{{item.productId}}+{{i}}"
+                    [(ngModel)]="viewBillRequest.detailBills[i].amount" (ngModelChange)="changeAmount()" >
                   </p-inputNumber>
                 </div>
               </th>
               <th>
-                <div *ngIf="selectedUnit!=null">
-                  {{selectedUnit.outPrice}}
+                <div *ngIf="null!=viewBillRequest && null !=viewBillRequest.detailBills">
+                  {{viewBillRequest.detailBills[i].outPrice | number:'1.0-0'}}
                 </div>
               </th>
               <th>
-                <div *ngIf="selectedUnit!=null" class="fw-bold">
-                  {{item.amount*selectedUnit.outPrice}}
+                <div *ngIf="null!=viewBillRequest && null !=viewBillRequest.detailBills">
+                  {{viewBillRequest.detailBills[i].outPrice * viewBillRequest.detailBills[i].amount | number:'1.0-0'}}
                 </div>
               </th>
             </tr>
@@ -98,11 +89,11 @@
                         data-bs-auto-close="true" aria-expanded="false">
                   Nhân viên
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="defaultDropdown">
-                  <li><a class="dropdown-item" href="#">Nhân viên A</a></li>
-                  <li><a class="dropdown-item" href="#">Nhân viên B</a></li>
-                  <li><a class="dropdown-item" href="#">Nhân viên C</a></li>
-                </ul>
+<!--                <ul class="dropdown-menu" aria-labelledby="defaultDropdown">-->
+<!--                  <li><a class="dropdown-item" href="#">Nhân viên A</a></li>-->
+<!--                  <li><a class="dropdown-item" href="#">Nhân viên B</a></li>-->
+<!--                  <li><a class="dropdown-item" href="#">Nhân viên C</a></li>-->
+<!--                </ul>-->
               </div>
             </div>
             <div class="col">
@@ -113,7 +104,7 @@
               <tbody>
               <tr>
                 <td>Tổng tiền hàng</td>
-                <td>{{numToString(toltal)}}</td>
+                <td>{{numToString()}}</td>
               </tr>
               <tr>
                 <td>Giảm giá</td>
@@ -121,7 +112,7 @@
               </tr>
               <tr>
                 <td class="fw-bold">Khách cần trả</td>
-                <td>{{numToString(toltal)}}</td>
+                <td>{{numToString()}}</td>
               </tr>
               <tr>
                 <td class="fw-bold">Khách thanh toán</td>
@@ -136,7 +127,7 @@
                 <td class="fw-bold">Tiền thừa</td>
                 <td>
                   <div class="col-8">
-                    <input type="text" class="form-control inputSale" [(ngModel)]="moneyPay - toltal">
+                    <input type="text" class="form-control inputSale" [value]="moneyPay - numToString()" disabled>
                   </div>
                 </td>
               </tr>
@@ -149,14 +140,14 @@
               <p-radioButton (click)="showDialogPayment()" name="groupname" value="payment" [(ngModel)]="selectedValue"
                              label="Quét mã"></p-radioButton>
             </div>
-            <div class="sell-money_recommend m-3 ps-5 pe-3 pt-3 pb-3 flex-row flex-wrap" *ngIf="isPayment">
-              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>
-              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>
-              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>
-              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>
-              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>
-              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>
-            </div>
+<!--            <div class="sell-money_recommend m-3 ps-5 pe-3 pt-3 pb-3 flex-row flex-wrap" *ngIf="isPayment">-->
+<!--              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>-->
+<!--              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>-->
+<!--              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>-->
+<!--              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>-->
+<!--              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>-->
+<!--              <p class="sell-money_recommend_item fw-bold text-center me-3">25.000</p>-->
+<!--            </div>-->
             <div class="sell-money_bank p-3 row" *ngIf="!isPayment">
 
             </div>
@@ -164,7 +155,7 @@
         </div>
         <div class="sell-money_footer">
           <div class="d-grid gap-2">
-            <button class="btn text-uppercase" type="button" *ngIf="isPayment">thanh toán</button>
+            <button class="btn text-uppercase" type="button" *ngIf="!isPayment" (mousedown)="transaction()" )>thanh toán</button>
           </div>
         </div>
       </div>
@@ -186,7 +177,7 @@
   <ng-template pTemplate="footer">
     <div class="sell-money_footer">
       <div class="d-grid gap-2">
-        <button class="btn text-uppercase" type="button">thanh toán</button>
+        <button class="btn text-uppercase" type="button" (mousedown)="transaction()">thanh toán</button>
       </div>
     </div>
   </ng-template>
