--- a/src/app/layout/employee/type-product/type-product.component.html
+++ b/src/app/layout/employee/type-product/type-product.component.html
@@ -255,8 +255,7 @@
                     </div>
                     <div class="mb-3">
                       <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-                      <textarea [(ngModel)]="updateTypeProductResponse.description" [ngModelOptions]="{standalone: true}"
-                                class="form-control" id="description" rows="3"></textarea>
+                      <textarea class="form-control" [(ngModel)]="updateTypeProductResponse.description" id="description-category" name="description" rows="3" style="resize: none;"></textarea>
                     </div>
                     <div class="mb-3"></div>
                     <div class="col-md-3 mb-3">
